css/style.css
/* ... */
#btn-delete:hover {
  opacity: 1;
  transition-timing-function: ease;
  transition-duration: 2s;
  border-color: gray;
}

#btn-item {
  margin: 2em;
  display: inline;
}

/*post.php styling*/
#comments-off h4 {
  text-align: center;
  margin: auto;
}

#comment-log {
  margin: auto;
  text-align: center;
  border-radius: 2em;
  background-color: rgb(68, 21, 2);
  position: relative;
  margin: 1em auto;
  width: 80%;
  padding: 1em;
  border: solid 2pt black;
  overflow-y: scroll;
}

#comment-log p {
  color: white;
}

#comment-form {
  margin: auto;
  text-align: center;
  border-radius: 2em;
  background-color: rgb(68, 21, 2);
  position: relative;
  margin: 1em auto;
  width: 80%;
  padding: 1em;
  border: solid 2pt black;
}

#comment {
  width: 80%;
}

#comment-div {
  border-radius: 1em;
}

#comment-table
td
tr {
  padding: 1em;
  margin: 0 auto;
  width: 100%;
}

#comment-table {
  border-spacing: 2em 0;
  border-collapse: separate;
}

#cUsername {
  background-color: rgb(226, 226, 225);
  border-radius: 1em;
}

#commentContent {
  background-color: rgb(15, 15, 13);
  border-radius: 1em;
  color: white;
}

#cLikes {
  background-color: rgb(18, 29, 42);
  color: white;
  padding: 1em;
  border-radius: 2em;
  margin: 1em;
  transition-timing-function: ease;
  transition-duration: 2s;
}

#cLikes:hover {
  background-color: rgb(36, 76, 126);
  color: white;
  padding: 1em;
  border-radius: 2em;
  margin: 1em;
  transition-timing-function: ease;
  transition-duration: 2s;
}

#comment-del-btn {
  border-radius: 1em;
  padding: 1em;
}

/* Account Settings Page styling */
#accountForm {
  text-align: center;
  margin: auto;
  display: block;
  padding-top: 1em;
  text-align: center;
  background-color: rgb(187, 184, 184);
  border: solid 3pt black;
}

#accountForm label {
  font-size: 2em;
  margin: 2em;
  font-weight: bold;
}

#accountForm input {
  font-weight: bold;
  text-align: center;
  transition-timing-function: ease;
  transition-duration: 2s;
  font-size: 2em;
  border-radius: 1em;
}

#accountForm input:hover {
  background-color: rgb(250, 250, 212);
  transition-timing-function: ease-in;
  transition-duration: 1s;
}

#imageForm {
  text-align: center;
  padding-top: 1em;
  margin: 1em auto;
  display: block;
  text-align: center;
  background-color: rgb(255, 255, 255);
  border: solid 3pt black;
}

#imageForm label {
  font-size: 2em;
  margin: 2em;
  font-weight: bold;
}

#accountForm #saveBtn {
  text-align: center;
  font-size: 2em;
  background-color: rgb(25, 100, 42);
  color: white;
  border: solid 2pt black;
  border-radius: 2em;
  margin-bottom: 1em;
  margin-top: 1em;
  padding: 0.5em;
  width: 40%;
  box-shadow: 2px 2px black;
  transition-duration: 1s;
  transition-timing-function: ease;
}

#accountForm #saveBtn:hover {
  width: 45%;
  transition-duration: 1s;
  transition-timing-function: ease;
}

#imageForm #uploadBtn {
  text-align: center;
  font-size: 2em;
  background-color: rgb(32, 99, 150);
  color: white;
  border: solid 2pt black;
  border-radius: 2em;
  margin-bottom: 1em;
  padding: 0.5em;
  width: 40%;
  box-shadow: 2px 2px black;
  transition-duration: 1s;
  transition-timing-function: ease;
}

#imageForm #uploadBtn:hover {
  width: 45%;
  transition-duration: 1s;
  transition-timing-function: ease;
}

#deleteForm {
  text-align: center;
  margin: 1em auto;
  display: block;
  padding-top: 1em;
  text-align: center;
  background-color: rgb(255, 255, 255);
  border: solid 3pt black;
}

#deleteForm label {
  font-size: 2em;
  margin: 2em;
  font-weight: bold;
}

#deleteForm #deleteBtn {
  text-align: center;
  font-size: 2em;
  background-color: rgb(161, 55, 28);
  color: white;
  border: solid 2pt black;
  border-radius: 2em;
  margin-bottom: 1em;
  padding: 0.5em;
  width: 40%;
  box-shadow: 2px 2px black;
  transition-duration: 1s;
  transition-timing-function: ease;
}

#deleteForm #deleteBtn:hover {
  width: 45%;
  transition-duration: 1s;
  transition-timing-function: ease;
}

/* Search.php styling */
#center b {
  color: yellow;
}

/* Profile page styling. */
#ppProfilePage {
  width: 15%;
  margin: auto;
}

#flName {
  margin: auto;
  text-align: center;
  color: rgb(18, 29, 42);
}

#ppTab {
  background-color: lightblue;
  border-radius: 1em;
  width: 50%;
  margin: auto;
  text-align: center;
  border: solid 2pt black;
}

/*Home Page Styling */
#helper {
  text-align: center;
  font-weight: bold;
}


/* Admin Styling */
.admin-table {
  display: flex;
  justify-content: center;
  width: 100%;
}

.admin-table th {
  padding: 20px;
}

.admin-table tr:nth-child(2) {
  background: #fff;
}

.arrow{
  position:absolute;
  right: 5em;
}

